updated all of the code

--- a/index.html
+++ b/index.html
@@ -10,17 +10,13 @@
 <body>
 
 h1><b>My Sites</b></h1>
-<a href="https://phlypper.github.io/my-bio/
-“>Bio</a>
+<a href="https://phlypper.github.io/my-bio/bio.html">Bio</a>
 <br/>
-<a href="https://phlypper.github.io/my_personal_portfolio_page/
-“>Company</a>
+<a href="https://phlypper.github.io/my_personal_portfolio_page/index.html">Company</a>
 <br/>
-<a href="https://phlypper.github.io/my_personal_portfolio_page/
-“>Portfolio</a>
+<a href="https://phlypper.github.io/my_personal_portfolio_page/index.html">Portfolio</a>
 <br/>
-<a href="https://phlypper.github.io/tribute_page/
-“>Tribute</a>
+<a href="https://phlypper.github.io/tribute_page/index.html">Tribute</a>
 <br/>
     </body>
 </html>
