--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 <body>
 
-h1><b>My Sites</b></h1>
-<a href="https://phlypper.github.io/my-bio/bio.html">Bio</a>
+<h1><b>My Sites</b></h1>
+<a href="Bio/bio.html">Bio</a>
 <br/>
-<a href="https://phlypper.github.io/my_personal_portfolio_page/index.html">Company</a>
+<a href="Landing/index.html">Company</a>
 <br/>
-<a href="https://phlypper.github.io/my_personal_portfolio_page/index.html">Portfolio</a>
+<a href="Portfolio/index.html">Portfolio</a>
 <br/>
-<a href="https://phlypper.github.io/tribute_page/index.html">Tribute</a>
+<a href="Tribute/index.html">Tribute</a>
 <br/>
     </body>
 </html>
